<resources>
    <string name="app_name">Tela_Inicial</string>
    <string name="criar_conta">CRIAR CONTA</string>
    <string name="digite_a_sua_senha">Digite a sua senha</string>
    <string name="confirmar_a_sua_senha">Confirmar a sua senha</string>
    <string name="confirmar_senha">Confirmar Senha</string>
    <string name="procurar_por_bicicletas_a_reservar">Procurar por bicicletas a reservar</string>
    <string name="bicicletas_d_sponiveis_10">Bicicletas dísponiveis: 10</string>
    <string name="_200km">200Km</string>
    <string name="dist_ncia">Distância:</string>
    <string name="luanda">Luanda</string>
    <string name="esta_es_de_estacionamento_pr_xima">Estações de estacionamento próxima</string>
    <string name="pontos">PONTOS</string>
    <string name="anderson_danilo_001245">Anderson Danilo #001245</string>
    <string name="_1000_pts">1000 Pts</string>
    <string name="enviar_pontos">Enviar Pontos</string>
    <string name="anderson_danilo">Anderson Danilo</string>
    <string name="receber_pontos">Receber pontos</string>
    <string name="troca_de_pontos">Troca de pontos</string>
    <string name="quantidade_de_pontos">Quantidade de pontos</string>
    <string name="insira_a_quantidade_de_pontos">Insira a quantidade de pontos</string>
    <string name="filtrar_por_id_do_ciclista">Filtrar por id do ciclista</string>
    <string name="filtrar_por_id">Filtrar por (ID):</string>
    <string name="derby_candido">Derby Candido</string>
    <string name="digite_a_sua_mensagem">Digite a sua mensagem</string>
    <string name="traject_ria">Trajectória</string>
    <string name="under"><u>Ontem</u></string>
    <string name="esta_o_kambamba_ii">Estação Kambamba II</string>
    <string name="bicicletas_3">Bicicletas:3</string>
    <string name="bicicletas_1">Bicicletas:1</string>
    <string name="universidade_isptec">Universidade isptec</string>
    <string name="col_gio_albert_einstein">Colégio Albert Einstein</string>
    <string name="trajecto_feito">Trajecto feito</string>
    <string name="bicicletas_reservadas">Bicicletas reservadas</string>
    <string name="distancia_percorrida_5km">Distancia percorrida: 5Km</string>
    <string name="hist_rico_da_trajet_ria"><u>Histórico da trajetória</u></string>
    <string name="venha_e_reserve_a_sua_bicicleta">Venha e reserve a sua bicicleta</string>
    <string name="digite_o_seu_nome_de_utilizador">Digite o seu nome de utilizador</string>
    <string name="senha">Senha</string>
    <string name="nome_do_utilizador">Nome do utilizador</string>
    <string name="login">LOGIN</string>
</resources>