<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context=".CriarContaView">

  <ScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:background="@color/third_Bg"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="0dp"
        android:orientation="vertical">

      <ImageView
          android:id="@+id/imageView2"
          android:layout_width="40dp"
          android:layout_height="40dp"
          android:layout_margin="20dp"
          app:srcCompat="@drawable/btnvoltar" />

      <TextView
          android:id="@+id/Titulo_CrirConta"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginHorizontal="40dp"
          android:layout_marginVertical="10dp"
          android:padding="5dp"
          android:text="@string/criar_conta"
          android:textColor="@color/white"
          android:textSize="26sp" />

      <TextView
          android:id="@+id/textview_NomeUtilizadorCriarConta"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginHorizontal="40dp"
          android:layout_marginVertical="15dp"
          android:layout_weight="1"
          android:padding="10sp"
          android:text="@string/nome_do_utilizador"
          android:textColor="@color/white"
          android:textSize="18sp" />

      <EditText
          android:id="@+id/editTextText3"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginHorizontal="40dp"
          android:background="@drawable/border_inputs"
          android:ems="10"
          android:hint="@string/digite_o_seu_nome_de_utilizador"
          android:inputType="text"
          android:padding="10sp"
          android:textColor="@color/white" />

      <TextView
          android:id="@+id/textview_SenhaCriarConta"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:layout_marginHorizontal="40dp"
          android:layout_marginVertical="15dp"
          android:padding="10sp"
          android:text="@string/senha"
          android:textColor="@color/white"
          android:textSize="18sp" />

      <EditText
          android:id="@+id/inputSenha_CriarConta"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginHorizontal="40dp"
          android:background="@drawable/border_inputs"
          android:ems="10"
          android:hint="@string/digite_a_sua_senha"
          android:inputType="textPassword"
          android:padding="10sp"
          android:textColor="@color/white" />


      <TextView
          android:id="@+id/textview_confirmarSenhaCriarConta"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:layout_marginHorizontal="40dp"
          android:layout_marginVertical="15dp"
          android:padding="10sp"
          android:text="@string/confirmar_senha"
          android:textColor="@color/white"
          android:textSize="18sp" />

      <EditText
          android:id="@+id/inputConfirmarSenha_CriarConta"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginHorizontal="40dp"
          android:background="@drawable/border_inputs"
          android:ems="10"
          android:hint="@string/confirmar_a_sua_senha"
          android:inputType="textPassword"
          android:padding="10sp"
          android:textColor="@color/white" />

      <Button
          android:id="@+id/BtnCriarConta"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginHorizontal="50dp"
          android:layout_marginVertical="50dp"
          android:background="@drawable/border_button"
          android:padding="10dp"
          android:text="@string/criar_conta" />
    </LinearLayout>
  </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>