<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Trajetoria">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView10"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginHorizontal="30dp"
                android:layout_marginVertical="30dp"
                app:srcCompat="@drawable/back01" />

            <TextView
                android:id="@+id/tituloTrajetoria"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginVertical="20dp"
                android:text="@string/traject_ria"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold" />


            <CalendarView
                android:id="@+id/calendarioFiltro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="30dp" />

            <TextView
                android:id="@+id/dataTrajectoria"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="10dp"
                android:text="@string/under"
                android:textSize="20sp" />

            <LinearLayout
                android:id="@+id/layoutItens"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginVertical="10dp"
                android:background="@drawable/itens_trajetoria_borderadius"
                android:elevation="10dp"
                android:orientation="vertical"
                android:padding="10dp">


                <TextView
                    android:id="@+id/estacaoDeRecolha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="10dp"
                    android:text="@string/esta_o_kambamba_ii"
                    android:textSize="20sp"
                    app:drawableStartCompat="@drawable/baseline_circle_24" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:drawablePadding="10dp"
                    android:text="@string/bicicletas_3"
                    android:textSize="18sp"
                    android:textStyle="italic"
                    app:drawableStartCompat="@drawable/bicicletapreta" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutItens02"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginVertical="10dp"
                android:background="@drawable/itens_trajetoria_borderadius"
                android:elevation="10dp"
                android:orientation="vertical"
                android:padding="10dp">


                <TextView
                    android:id="@+id/estacao"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="10dp"
                    android:text="@string/universidade_isptec"
                    android:textSize="20sp"
                    app:drawableStartCompat="@drawable/baseline_circle_24" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:drawablePadding="10dp"
                    android:text="@string/bicicletas_1"
                    android:textSize="18sp"
                    android:textStyle="italic"
                    app:drawableStartCompat="@drawable/bicicletapreta" />

            </LinearLayout>


        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>