<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/brancoTransparente"
    tools:context=".Trajetoria_Details">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageButton"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/circulo_bgclose"
            android:padding="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/close_icon" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="120dp"
            android:background="@drawable/draw_trajectoria_item"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:background="@drawable/draw_trajectoria_item"
                android:orientation="vertical"
                android:padding="10dp">

                <com.google.android.gms.maps.MapView
                    android:id="@+id/mapView2"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_marginHorizontal="5dp"
                    android:background="@drawable/bordas_redondas" />


                <TextView
                    android:id="@+id/textView26"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="20dp"
                    android:text="@string/hist_rico_da_trajet_ria"
                    android:textColor="@color/main_background"
                    android:textAlignment="center"
                    android:textSize="28sp" />

                <TextView
                    android:id="@+id/textView27"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="10dp"
                    android:drawablePadding="10dp"
                    android:padding="10dp"
                    android:text="@string/universidade_isptec"
                    android:textSize="20sp"
                    app:drawableStartCompat="@drawable/baseline_circle_24" />


                <TextView
                    android:id="@+id/destinoTextID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="10dp"
                    android:drawablePadding="10dp"
                    android:padding="10dp"
                    android:text="@string/col_gio_albert_einstein"
                    android:textSize="20sp"
                    app:drawableStartCompat="@drawable/baseline_location_pin_24" />


                <TextView
                    android:id="@+id/distanciaTextID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginHorizontal="20dp"
                    android:textStyle="italic"
                    android:padding="10dp"
                    android:text="@string/distancia_percorrida_5km"

                    android:textSize="18sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginVertical="20dp"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/textView29"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="10dp"
                        android:text="@string/bicicletas_reservadas"
                        android:textSize="16sp"
                        android:drawableStart="@drawable/bicicletapreta"
                        android:drawablePadding="10dp"
                        android:background="@drawable/bordas_cinzas"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/numBicicletasReservadas"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_weight="1"
                        android:padding="10dp"
                        android:text="3"
                        android:textAlignment="center"
                        android:textSize="16sp"
                        android:background="@drawable/bordas_cinzas"
                        android:textStyle="bold" />
                </LinearLayout>

                <Button
                    android:id="@+id/button4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="40dp"
                    android:layout_marginTop="20dp"
                    android:backgroundTint="@color/second_background"
                    android:drawableStart="@drawable/partilhar_icon"
                    android:padding="20dp"
                    android:text="Partilhar trajetoria" />

            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>