<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".UserLogadoView">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:id="@+id/scrollView5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="21dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                </androidx.constraintlayout.widget.ConstraintLayout>


                <fragment
                    android:id="@+id/mapView"
                    android:name="com.google.android.gms.maps.SupportMapFragment"
                    android:layout_width="match_parent"
                    android:layout_height="400dp"
                    tools:layout_editor_absoluteX="21dp"
                    tools:layout_editor_absoluteY="-17dp" />
                <EditText
                    android:id="@+id/input_ProcurarBicicletas_a_reservar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:background="@drawable/border_inputsearch"
                    android:drawableStart="@drawable/iconsearch"
                    android:drawablePadding="16dp"
                    android:ems="10"
                    android:hint="@string/procurar_por_bicicletas_a_reservar"
                    android:inputType="text"
                    android:padding="10dp"
                    android:textSize="18sp" />

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">


                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                        </androidx.constraintlayout.widget.ConstraintLayout>

                        <TextView
                            android:id="@+id/titulo_Estacoes_Proximas"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="20dp"
                            android:padding="10dp"
                            android:text="@string/esta_es_de_estacionamento_pr_xima"
                            android:textSize="20sp" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:layout_margin="20dp"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/textView14"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/black"
                                android:drawablePadding="10dp"
                                android:drawableStart="@drawable/baseline_location_pin_24"
                                android:textSize="25sp"
                                android:text="@string/luanda" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="horizontal">

                                <TextView
                                    android:id="@+id/textView18"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginVertical="8dp"
                                    android:layout_weight="1"
                                    android:text="@string/dist_ncia"
                                    android:textAlignment="textStart"
                                    android:textColor="@color/black"
                                    android:textSize="18sp" />

                                <TextView
                                    android:id="@+id/textView19"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginVertical="8dp"
                                    android:textSize="18sp"
                                    android:textColor="@color/black"
                                    android:textAlignment="textStart"
                                    android:layout_weight="20"
                                    android:text="@string/_200km" />
                            </LinearLayout>

                            <TextView
                                android:id="@+id/Bicicletas_disponiveis"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textColor="@color/black"
                                android:drawablePadding="10dp"
                                android:textSize="18sp"

                                android:text="@string/bicicletas_d_sponiveis_10"
                                android:drawableStart="@drawable/bicicletapreta" />

                        </LinearLayout>

                        <Button
                            android:id="@+id/button2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="20dp"
                            android:layout_marginVertical="20dp"
                            android:padding="15dp"
                            android:text="Reservar bicicleta" />

                    </LinearLayout>
                </ScrollView>

            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- LinearLayout sobreposto com os ícones -->
    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@drawable/gradient_color_background"
        app:layout_constraintBottom_toBottomOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="20dp"
            app:layout_constraintBottom_toBottomOf="parent"> <!-- Ícones centralizados -->

            <!-- Ícones no layout horizontal -->
            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/home" />

            <ImageView
                android:id="@+id/IconChat"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/chat"/>

            <ImageView
                android:id="@+id/IconBicicleta"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/bicicleta" />

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/user" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>