<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Tela_EnviarPontos">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:textColor="@color/third_Bg"
                app:srcCompat="@drawable/back01" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="30dp"
                android:padding="5dp"
                android:text="Envio de pontos "
                android:textAlignment="center"
                android:textColor="@color/main_background"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="Pontos disponivéis : 1000pts"
                android:textAlignment="center"
                android:textColor="@color/main_background"
                android:textSize="25sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="30dp"
                android:padding="15dp">

            </androidx.recyclerview.widget.RecyclerView>

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:padding="5dp"
                android:text="@string/filtrar_por_id"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/inputQtd_pontos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginVertical="10dp"
                android:background="@drawable/border_inputsearch"
                android:ems="10"
                android:hint="@string/filtrar_por_id_do_ciclista"
                android:inputType="text"
                android:padding="15dp"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginVertical="10dp"
                android:hint="Quantidade de pontos:"
                android:padding="5dp"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/inputQtd_pontos3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginVertical="10dp"
                android:background="@drawable/border_inputsearch"
                android:ems="10"
                android:hint="@string/insira_a_quantidade_de_pontos"
                android:inputType="text"
                android:padding="15dp"
                android:textSize="20sp" />

            <Button
                android:id="@+id/button3"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginVertical="30dp"
                android:backgroundTint="@color/design_default_color_secondary_variant"
                android:padding="20dp"
                android:text="Enviar pontos"
                android:textSize="18dp" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>